--- a/Packlists/MainWindow.xaml
+++ b/Packlists/MainWindow.xaml
@@ -56,7 +56,7 @@
                 <DataGrid Grid.Column="0"
                           Grid.ColumnSpan="2"
                           Grid.Row="2"
-                          Grid.RowSpan="3"
+                          Grid.RowSpan="2"
                           ItemsSource="{Binding PacklistView}" 
                           SelectedItem="{Binding SelectedPackliste}"
                           AutoGenerateColumns="False"
@@ -65,8 +65,7 @@
                     
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Packlists" 
-                                            Binding="{Binding PacklisteNumber}"
-                                            SortDirection="Descending"/>
+                                            Binding="{Binding PacklisteNumber}"/>
 
                         <DataGridTextColumn Header="Pack date"
                                             Binding="{Binding PacklisteDate, StringFormat=d, ConverterCulture=PL-pl}"/>
